--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
 </head>
 
 <body>
+    <header>
+        <nav class="container">
 
+            <div class="logo">
+                <img src="./images/logo.png" alt="">
+            </div>
+
+
+
+            <ul class="navigation">
+                <li><a href="">Home</a></li>
+                <li><a href="">Feature</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Contact</a></li>
+
+            </ul>
+
+
+
+
+
+        </nav>
+        <section class="container">
+            <div class="banner">
+                <div class="banner-left">
+                    <h1>Cartoons And Anime Series Stream Anytime On <span class="highlighter">Cosmic World</span></h1>
+                    <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem deserunt esse eligendi id
+                        ab unde
+                        eum perspiciatis est quasi necessitatibus.</p>
+                    <button class="primary-button">Browse Now</button>
+                </div>
+                <div class="banner-right">
+                    <img src="./images/about.png" alt="">
+                </div>
+            </div>
+
+        </section>
+    </header>
 </body>
 
 </html>
