featuer section done

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosmic World</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
+    <!-- Header section starts here -->
     <header>
+        <!-- Menu Bar starts here -->
         <nav class="container">
 
             <div class="logo">
                 <img src="./images/logo.png" alt="">
             </div>
-
-
-
             <ul class="navigation">
                 <li><a href="">Home</a></li>
                 <li><a href="">Feature</a></li>
@@ -27,12 +30,9 @@
                 <li><a href="">Contact</a></li>
 
             </ul>
-
-
-
-
-
         </nav>
+        <!-- Menu Bar ends here -->
+        <!-- Banner section starts here -->
         <section class="container">
             <div class="banner">
                 <div class="banner-left">
@@ -46,9 +46,59 @@
                     <img src="./images/about.png" alt="">
                 </div>
             </div>
+        </section>
+        <!-- Banner section ends here -->
+    </header>
+    <!-- Header ends here -->
+
+    <!-- Main starts here -->
+    <main class="container">
+        <!-- feature starts here -->
+        <section id="feature">
+            <div class="section-title">
+                <h2>Fea<span class="highlighter">t</span>ure</h2>
+            </div>
+
+            <div class="feature">
+                <div class="card">
+                    <i class="card-icon fa-solid fa-book"></i>
+                    <h3>Creative Story</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, distinctio. Perspiciatis
+                        dolorum voluptatem aliquam amet? </p>
+                    <a href="">Read More</a>
+
+                </div>
+                <div class="card">
+                    <i class="card-icon fa-solid fa-video"></i>
+                    <h3>4K Support</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, distinctio. Perspiciatis
+                        dolorum voluptatem aliquam amet? </p>
+                    <a href="">Read More</a>
+
+                </div>
+                <div class="card">
+                    <i class="card-icon fa-solid fa-star"></i>
+                    <h3>Super Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, distinctio. Perspiciatis
+                        dolorum voluptatem aliquam amet? </p>
+                    <a href="">Read More</a>
+
+                </div>
+                <div class="card">
+                    <i class="card-icon fa-solid fa-lock"></i>
+                    <h3>Highly Secured</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, distinctio. Perspiciatis
+                        dolorum voluptatem aliquam amet? </p>
+                    <a href="">Read More</a>
+
+                </div>
+            </div>
 
         </section>
-    </header>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"
+        integrity="sha512-yFjZbTYRCJodnuyGlsKamNE/LlEaEAxSUDe5+u61mV8zzqJVFOH7TnULE2/PP/l5vKWpUNnF4VGVkXh3MjgLsg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
