--- a/index.html
+++ b/index.html
@@ -95,7 +95,61 @@
             </div>
 
         </section>
+
+        <!-- Feature Section ends here -->
+        <!-- Gallery Section Starts here -->
+        <section id="gallery">
+            <div class="section-title">
+                <h2>Ga<span class="highlighter">ll</span>ery</h2>
+            </div>
+            <div class="gallery">
+                <div class="photo">
+                    <img src="./images/godzilla.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="./images/jumanji.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="./images/meena.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="./images/images (4).jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="./images/images (5).jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="./images/tomandjerry.jpg" alt="">
+                </div>
+            </div>
+
+        </section>
+
+        <section id="contacts">
+            <div class="section-title">
+                <h2>Contacts</h2>
+            </div>
+            <div class="contact">
+                <div class="contact-left">
+                    <img src="./images/contact.png" alt="">
+                </div>
+                <div class="contact-right">
+                    <form action="">
+                        <input class="text-field" type="text" placeholder="Your Name">
+                        <input class="text-field" type="email" placeholder="Your Email">
+                        <textarea class="text-field" name="" id="" cols="30" rows="10"
+                            placeholder=" Your Message"></textarea>
+                        <button class="primary-button submit-button">Submit</button>
+                    </form>
+
+
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <p>Copyright &copy; all right reserved by Cosmic World</p>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"
         integrity="sha512-yFjZbTYRCJodnuyGlsKamNE/LlEaEAxSUDe5+u61mV8zzqJVFOH7TnULE2/PP/l5vKWpUNnF4VGVkXh3MjgLsg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
